[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Evgeny Samoylov <samoyl@gmail.com>"]
readme = "README.md"
packages = [{include = "django_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
